--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,38 +1,46 @@
-name: "tagged-release"
+name: "release"
 on:
-  workflow_dispatch:
-    inputs:
-      version:
-        description: Bump Version
-        required: true
+  push:
+    branches:
+      - main
 jobs:
-  tagged-release:
-    name: "Tagged Release"
+  release:
+    name: "Release"
     runs-on: "ubuntu-latest"
 
     steps:
+      - name: set env
+        run: echo "NOW=$(date +'%Y.%m.%d')" >> $GITHUB_ENV
+
+      - name: Set Node.js 21.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 21.x
+
+      - name: Install Node.js dependencies
+        run: yarn install
+
+      - name: Generate provider code
+        run: node generators/rootly/rootly.js
+
       - uses: actions/checkout@v4
       - name: Install Go
         uses: actions/setup-go@v4
         with:
           go-version: "1.21"
-      - name: Test
-        run: go build -v && go test ./...
       - name: Build for linux/amd64
-        run: go build -o terraformer-all-linux-amd64
+        run: go build -o terraformer-rootly-linux-amd64
       - name: Build for linux/arm64
-        run: GOOS=linux GOARCH=arm64 go build -o terraformer-all-linux-arm64
+        run: GOOS=linux GOARCH=arm64 go build -o terraformer-rootly-linux-arm64
       - name: Build for mac
-        run: GOOS=darwin go build -o terraformer-all-darwin-amd64
+        run: GOOS=darwin go build -o terraformer-rootly-darwin-amd64
       - name: Build for mac Apple Silicon
-        run: GOOS=darwin GOARCH=arm64 go build -o terraformer-all-darwin-arm64
-      - name: Build for all providers
-        run: go run build/multi-build/main.go
+        run: GOOS=darwin GOARCH=arm64 go build -o terraformer-rootly-darwin-arm64
 
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: ${{ github.event.inputs.version }}
+          automatic_release_tag: ${{ env.NOW }}
           prerelease: false
           files: |
             terraformer-*
