--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -42,9 +42,12 @@ jobs:
       - name: Build for mac Apple Silicon
         run: GOOS=darwin GOARCH=arm64 go build -o terraformer-rootly-darwin-arm64
 
-      - uses: "marvinpinto/action-automatic-releases@latest"
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          prerelease: false
           files: |
-            terraformer-*
+            terraformer-rootly-linux-amd64
+            terraformer-rootly-linux-arm64
+            terraformer-rootly-darwin-amd64
+            terraformer-rootly-darwin-arm64
