--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -3,6 +3,7 @@ on:
   push:
     tags:
       - "v*"
+
 jobs:
   release:
     name: "Release"
@@ -28,6 +29,12 @@ jobs:
       - name: Build for mac Apple Silicon
         run: GOOS=darwin GOARCH=arm64 go build -o terraformer-rootly-darwin-arm64
 
+      - name: Build for windows/amd64
+        run: GOOS=windows GOARCH=amd64 go build -o terraformer-rootly-windows-amd64.exe
+
+      - name: Build for windows/arm64
+        run: GOOS=windows GOARCH=arm64 go build -o terraformer-rootly-windows-arm64.exe
+
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
@@ -37,3 +44,5 @@ jobs:
             terraformer-rootly-linux-arm64
             terraformer-rootly-darwin-amd64
             terraformer-rootly-darwin-arm64
+            terraformer-rootly-windows-amd64.exe
+            terraformer-rootly-windows-arm64.exe
